--- a/_layout/default.html
+++ b/_layout/default.html
@@ -3,21 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carnatic Ragas</title>
-    <link rel="stylesheet" href="assets/styles.css"> 
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ "/assets/styles.css" | relative_url }}">
 </head>
 <body>
     <header>
         <h1>My Project</h1>
-        
+
     </header>
 
     <main>
         <div class="container">
-
-            <div id="markdown-content">
-
-            </div>
+            {{ content }}
         </div>
     </main>
 
